# JCN-vendors-bot

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  example.env  pyproject.toml
.github/workflows/: cicd.yml  release.yml  schedule_job.yml
app/: __init__.py  __main__.py  app.py  bot.py  config.py  containers.py  context.py  routing.py
app/bots/: telegram_bot.py
app/clients/: exchaige_assistant.py
app/clients/exchaige_assistant/: __init__.py  base.py  client.py  currency.py  exchange_rate.py  files.py  telegram_account.py  telegram_messages.py
app/clients/firebase/: base.py  firestore.py
app/handlers/: __init__.py  bot_handler.py  callbacks.py  telegram.py
app/handlers/telegram/: __init__.py  messages.py
app/handlers/telegram_bot/: __init__.py  base.py  messages.py
app/libs/consts/: bot_commands.py  enums.py  messages.py
app/libs/database/: aio_redis.py
app/libs/decorators/: sentry_tracer.py  timer.py
app/libs/logger/: logger.py
app/models/: currency.py
app/models/account/: telegram.py
app/providers/: __init__.py  exchaige_assistant.py
app/providers/account/: __init__.py  telegram.py
app/routers/: __init__.py  root.py  webhook_root.py
app/routers/v1/: __init__.py  demo.py  telegram.py
app/schemas/: currency.py  exchaige_assistant.py
app/schemas/account/: telegram.py
app/schemas/telegram/: account.py  messages.py
app/serializers/v1/: telegram.py
tests/fixtures/: __init__.py  handlers.py
tests/fixtures/providers/: __init__.py  account.py  exchaige_assistant.py
tests/providers/: test_exchaige_assistant.py
(+8 files in other folders)
