[tool.poetry]
name = "JCN-vendors-bot"
version = "0.1.0"
description = ""
authors = ["Jay Hsia <jayhsia1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"
pydantic = "*"
pydantic-settings = "*"
python-dotenv = "*"
python-telegram-bot = "^20.6"
sentry-sdk = "^1.34.0"
firebase-admin = "^6.2.0"
redis = "^5.0.1"
dependency-injector = "*"


[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
